gmask/y.output

state 0
	$accept: .input $end 

	SCO  shift 3
	.  error

	csco  goto 2
	input  goto 1

state 1
	$accept:  input.$end 
	input:  input.field 

	$end  accept
	F  shift 5
	.  error

	field  goto 4

state 2
	input:  csco.    (1)

	.  reduce 1 (src line 63)


state 3
	csco:  SCO.    (3)

	.  reduce 3 (src line 67)


state 4
	input:  input field.    (2)
	field:  field.param 

	PARAM  shift 7
	.  reduce 2 (src line 64)

	param  goto 6

state 5
	field:  F.NUMBER NUMBER 

	NUMBER  shift 8
	.  error


state 6
	field:  field param.    (5)

	.  reduce 5 (src line 71)


state 7
	param:  PARAM.generator prec 

	ITEM  shift 16
	CONST  shift 10
	SEG  shift 12
	RANGE  shift 13
	RND  shift 19
	OSC  shift 20
	.  error

	generator  goto 9
	rndgen  goto 14
	oscgen  goto 15
	item  goto 11
	rnd  goto 17
	osc  goto 18

state 8
	field:  F NUMBER.NUMBER 

	NUMBER  shift 21
	.  error


state 9
	param:  PARAM generator.prec 
	generator:  generator.mask 
	generator:  generator.quant 
	generator:  generator.ACCUM ON 
	generator:  generator.ACCUM ON INIT NUMBER 
	generator:  generator.accum 
	prec: .    (91)

	PREC  shift 27
	MASK  shift 28
	QUANT  shift 29
	ACCUM  shift 25
	.  reduce 91 (src line 189)

	prec  goto 22
	mask  goto 23
	quant  goto 24
	accum  goto 26
	accummode  goto 30

state 10
	generator:  CONST.NUMBER 

	NUMBER  shift 31
	.  error


state 11
	generator:  item.( list ) 

	(  shift 32
	.  error


state 12
	generator:  SEG.bpf 

	(  shift 34
	[  shift 35
	.  error

	bpf  goto 33

state 13
	generator:  RANGE.NUMBER NUMBER 

	NUMBER  shift 36
	.  error


state 14
	generator:  rndgen.    (11)

	.  reduce 11 (src line 81)


state 15
	generator:  oscgen.    (12)

	.  reduce 12 (src line 82)


state 16
	item:  ITEM.CYCLE 
	item:  ITEM.SWING 
	item:  ITEM.HEAP 
	item:  ITEM.RANDOM 

	CYCLE  shift 37
	SWING  shift 38
	HEAP  shift 39
	RANDOM  shift 40
	.  error


state 17
	rndgen:  rnd.    (43)
	rndgen:  rnd.NUMBER 
	rndgen:  rnd.bpf 
	rndgen:  rnd.NUMBER NUMBER 
	rndgen:  rnd.bpf NUMBER 
	rndgen:  rnd.NUMBER bpf 
	rndgen:  rnd.bpf bpf 

	NUMBER  shift 41
	(  shift 34
	[  shift 35
	.  reduce 43 (src line 127)

	bpf  goto 42

state 18
	oscgen:  osc.NUMBER 
	oscgen:  osc.bpf 
	oscgen:  osc.NUMBER NUMBER 
	oscgen:  osc.bpf NUMBER 
	oscgen:  osc.NUMBER NUMBER NUMBER 
	oscgen:  osc.bpf NUMBER NUMBER 

	NUMBER  shift 43
	(  shift 34
	[  shift 35
	.  error

	bpf  goto 44

state 19
	rnd:  RND.UNI 
	rnd:  RND.LIN 
	rnd:  RND.RLIN 
	rnd:  RND.TRI 
	rnd:  RND.EXP 
	rnd:  RND.REXP 
	rnd:  RND.BEXP 
	rnd:  RND.GAUSS 
	rnd:  RND.CAUCHY 
	rnd:  RND.BETA 
	rnd:  RND.WEI 

	UNI  shift 45
	LIN  shift 46
	RLIN  shift 47
	TRI  shift 48
	EXP  shift 49
	REXP  shift 50
	BEXP  shift 51
	GAUSS  shift 52
	CAUCHY  shift 53
	BETA  shift 54
	WEI  shift 55
	.  error


state 20
	osc:  OSC.SIN 
	osc:  OSC.COS 
	osc:  OSC.SQUARE 
	osc:  OSC.TRIANGLE 
	osc:  OSC.SAWUP 
	osc:  OSC.SAWDOWN 
	osc:  OSC.POWUP 
	osc:  OSC.POWDOWN 

	COS  shift 57
	SIN  shift 56
	SQUARE  shift 58
	TRIANGLE  shift 59
	SAWUP  shift 60
	SAWDOWN  shift 61
	POWUP  shift 62
	POWDOWN  shift 63
	.  error


state 21
	field:  F NUMBER NUMBER.    (4)

	.  reduce 4 (src line 70)


state 22
	param:  PARAM generator prec.    (6)

	.  reduce 6 (src line 74)


state 23
	generator:  generator mask.    (13)
	mask:  mask.MAP NUMBER 

	MAP  shift 64
	.  reduce 13 (src line 83)


state 24
	generator:  generator quant.    (14)

	.  reduce 14 (src line 84)


state 25
	generator:  generator ACCUM.ON 
	generator:  generator ACCUM.ON INIT NUMBER 
	accummode:  ACCUM.LIMIT 
	accummode:  ACCUM.MIRROR 
	accummode:  ACCUM.WRAP 

	ON  shift 65
	LIMIT  shift 66
	MIRROR  shift 67
	WRAP  shift 68
	.  error


state 26
	generator:  generator accum.    (17)
	accum:  accum.INIT NUMBER 

	INIT  shift 69
	.  reduce 17 (src line 87)


state 27
	prec:  PREC.NUMBER 

	NUMBER  shift 70
	.  error


state 28
	mask:  MASK.NUMBER NUMBER 
	mask:  MASK.bpf NUMBER 
	mask:  MASK.NUMBER bpf 
	mask:  MASK.bpf bpf 

	NUMBER  shift 71
	(  shift 34
	[  shift 35
	.  error

	bpf  goto 72

state 29
	quant:  QUANT.NUMBER 
	quant:  QUANT.bpf 
	quant:  QUANT.NUMBER NUMBER 
	quant:  QUANT.NUMBER bpf 
	quant:  QUANT.bpf NUMBER 
	quant:  QUANT.bpf bpf 
	quant:  QUANT.NUMBER NUMBER NUMBER 
	quant:  QUANT.NUMBER NUMBER bpf 
	quant:  QUANT.NUMBER bpf NUMBER 
	quant:  QUANT.NUMBER bpf bpf 
	quant:  QUANT.bpf NUMBER NUMBER 
	quant:  QUANT.bpf NUMBER bpf 
	quant:  QUANT.bpf bpf NUMBER 
	quant:  QUANT.bpf bpf bpf 

	NUMBER  shift 73
	(  shift 34
	[  shift 35
	.  error

	bpf  goto 74

state 30
	accum:  accummode.NUMBER NUMBER 
	accum:  accummode.bpf NUMBER 
	accum:  accummode.NUMBER bpf 
	accum:  accummode.bpf bpf 

	NUMBER  shift 75
	(  shift 34
	[  shift 35
	.  error

	bpf  goto 76

state 31
	generator:  CONST NUMBER.    (7)

	.  reduce 7 (src line 77)


state 32
	generator:  item (.list ) 

	NUMBER  shift 78
	.  error

	list  goto 77

state 33
	generator:  SEG bpf.    (9)

	.  reduce 9 (src line 79)


state 34
	bpf:  (.bplist ipl ) 

	NUMBER  shift 80
	.  error

	bplist  goto 79

state 35
	bpf:  [.NUMBER NUMBER ipl ] 

	NUMBER  shift 81
	.  error


state 36
	generator:  RANGE NUMBER.NUMBER 

	NUMBER  shift 82
	.  error


state 37
	item:  ITEM CYCLE.    (18)

	.  reduce 18 (src line 90)


state 38
	item:  ITEM SWING.    (19)

	.  reduce 19 (src line 91)


state 39
	item:  ITEM HEAP.    (20)

	.  reduce 20 (src line 92)


state 40
	item:  ITEM RANDOM.    (21)

	.  reduce 21 (src line 93)


state 41
	rndgen:  rnd NUMBER.    (44)
	rndgen:  rnd NUMBER.NUMBER 
	rndgen:  rnd NUMBER.bpf 

	NUMBER  shift 83
	(  shift 34
	[  shift 35
	.  reduce 44 (src line 128)

	bpf  goto 84

state 42
	rndgen:  rnd bpf.    (45)
	rndgen:  rnd bpf.NUMBER 
	rndgen:  rnd bpf.bpf 

	NUMBER  shift 85
	(  shift 34
	[  shift 35
	.  reduce 45 (src line 129)

	bpf  goto 86

state 43
	oscgen:  osc NUMBER.    (58)
	oscgen:  osc NUMBER.NUMBER 
	oscgen:  osc NUMBER.NUMBER NUMBER 

	NUMBER  shift 87
	.  reduce 58 (src line 146)


state 44
	oscgen:  osc bpf.    (59)
	oscgen:  osc bpf.NUMBER 
	oscgen:  osc bpf.NUMBER NUMBER 

	NUMBER  shift 88
	.  reduce 59 (src line 147)


state 45
	rnd:  RND UNI.    (32)

	.  reduce 32 (src line 114)


state 46
	rnd:  RND LIN.    (33)

	.  reduce 33 (src line 115)


state 47
	rnd:  RND RLIN.    (34)

	.  reduce 34 (src line 116)


state 48
	rnd:  RND TRI.    (35)

	.  reduce 35 (src line 117)


state 49
	rnd:  RND EXP.    (36)

	.  reduce 36 (src line 118)


state 50
	rnd:  RND REXP.    (37)

	.  reduce 37 (src line 119)


state 51
	rnd:  RND BEXP.    (38)

	.  reduce 38 (src line 120)


state 52
	rnd:  RND GAUSS.    (39)

	.  reduce 39 (src line 121)


state 53
	rnd:  RND CAUCHY.    (40)

	.  reduce 40 (src line 122)


state 54
	rnd:  RND BETA.    (41)

	.  reduce 41 (src line 123)


state 55
	rnd:  RND WEI.    (42)

	.  reduce 42 (src line 124)


state 56
	osc:  OSC SIN.    (50)

	.  reduce 50 (src line 136)


state 57
	osc:  OSC COS.    (51)

	.  reduce 51 (src line 137)


state 58
	osc:  OSC SQUARE.    (52)

	.  reduce 52 (src line 138)


state 59
	osc:  OSC TRIANGLE.    (53)

	.  reduce 53 (src line 139)


state 60
	osc:  OSC SAWUP.    (54)

	.  reduce 54 (src line 140)


state 61
	osc:  OSC SAWDOWN.    (55)

	.  reduce 55 (src line 141)


state 62
	osc:  OSC POWUP.    (56)

	.  reduce 56 (src line 142)


state 63
	osc:  OSC POWDOWN.    (57)

	.  reduce 57 (src line 143)


state 64
	mask:  mask MAP.NUMBER 

	NUMBER  shift 89
	.  error


state 65
	generator:  generator ACCUM ON.    (15)
	generator:  generator ACCUM ON.INIT NUMBER 

	INIT  shift 90
	.  reduce 15 (src line 85)


state 66
	accummode:  ACCUM LIMIT.    (83)

	.  reduce 83 (src line 177)


state 67
	accummode:  ACCUM MIRROR.    (84)

	.  reduce 84 (src line 178)


state 68
	accummode:  ACCUM WRAP.    (85)

	.  reduce 85 (src line 179)


state 69
	accum:  accum INIT.NUMBER 

	NUMBER  shift 91
	.  error


state 70
	prec:  PREC NUMBER.    (92)

	.  reduce 92 (src line 190)


state 71
	mask:  MASK NUMBER.NUMBER 
	mask:  MASK NUMBER.bpf 

	NUMBER  shift 92
	(  shift 34
	[  shift 35
	.  error

	bpf  goto 93

state 72
	mask:  MASK bpf.NUMBER 
	mask:  MASK bpf.bpf 

	NUMBER  shift 94
	(  shift 34
	[  shift 35
	.  error

	bpf  goto 95

state 73
	quant:  QUANT NUMBER.    (69)
	quant:  QUANT NUMBER.NUMBER 
	quant:  QUANT NUMBER.bpf 
	quant:  QUANT NUMBER.NUMBER NUMBER 
	quant:  QUANT NUMBER.NUMBER bpf 
	quant:  QUANT NUMBER.bpf NUMBER 
	quant:  QUANT NUMBER.bpf bpf 

	NUMBER  shift 96
	(  shift 34
	[  shift 35
	.  reduce 69 (src line 161)

	bpf  goto 97

state 74
	quant:  QUANT bpf.    (70)
	quant:  QUANT bpf.NUMBER 
	quant:  QUANT bpf.bpf 
	quant:  QUANT bpf.NUMBER NUMBER 
	quant:  QUANT bpf.NUMBER bpf 
	quant:  QUANT bpf.bpf NUMBER 
	quant:  QUANT bpf.bpf bpf 

	NUMBER  shift 98
	(  shift 34
	[  shift 35
	.  reduce 70 (src line 162)

	bpf  goto 99

state 75
	accum:  accummode NUMBER.NUMBER 
	accum:  accummode NUMBER.bpf 

	NUMBER  shift 100
	(  shift 34
	[  shift 35
	.  error

	bpf  goto 101

state 76
	accum:  accummode bpf.NUMBER 
	accum:  accummode bpf.bpf 

	NUMBER  shift 102
	(  shift 34
	[  shift 35
	.  error

	bpf  goto 103

state 77
	generator:  item ( list.) 
	list:  list.NUMBER 

	NUMBER  shift 105
	)  shift 104
	.  error


state 78
	list:  NUMBER.    (22)

	.  reduce 22 (src line 96)


state 79
	bpf:  ( bplist.ipl ) 
	bplist:  bplist.NUMBER NUMBER 
	ipl: .    (28)

	NUMBER  shift 107
	IPL  shift 108
	.  reduce 28 (src line 108)

	ipl  goto 106

state 80
	bplist:  NUMBER.NUMBER 

	NUMBER  shift 109
	.  error


state 81
	bpf:  [ NUMBER.NUMBER ipl ] 

	NUMBER  shift 110
	.  error


state 82
	generator:  RANGE NUMBER NUMBER.    (10)

	.  reduce 10 (src line 80)


state 83
	rndgen:  rnd NUMBER NUMBER.    (46)

	.  reduce 46 (src line 130)


state 84
	rndgen:  rnd NUMBER bpf.    (48)

	.  reduce 48 (src line 132)


state 85
	rndgen:  rnd bpf NUMBER.    (47)

	.  reduce 47 (src line 131)


state 86
	rndgen:  rnd bpf bpf.    (49)

	.  reduce 49 (src line 133)


state 87
	oscgen:  osc NUMBER NUMBER.    (60)
	oscgen:  osc NUMBER NUMBER.NUMBER 

	NUMBER  shift 111
	.  reduce 60 (src line 148)


state 88
	oscgen:  osc bpf NUMBER.    (61)
	oscgen:  osc bpf NUMBER.NUMBER 

	NUMBER  shift 112
	.  reduce 61 (src line 149)


state 89
	mask:  mask MAP NUMBER.    (68)

	.  reduce 68 (src line 158)


state 90
	generator:  generator ACCUM ON INIT.NUMBER 

	NUMBER  shift 113
	.  error


state 91
	accum:  accum INIT NUMBER.    (90)

	.  reduce 90 (src line 186)


state 92
	mask:  MASK NUMBER NUMBER.    (64)

	.  reduce 64 (src line 154)


state 93
	mask:  MASK NUMBER bpf.    (66)

	.  reduce 66 (src line 156)


state 94
	mask:  MASK bpf NUMBER.    (65)

	.  reduce 65 (src line 155)


state 95
	mask:  MASK bpf bpf.    (67)

	.  reduce 67 (src line 157)


state 96
	quant:  QUANT NUMBER NUMBER.    (71)
	quant:  QUANT NUMBER NUMBER.NUMBER 
	quant:  QUANT NUMBER NUMBER.bpf 

	NUMBER  shift 114
	(  shift 34
	[  shift 35
	.  reduce 71 (src line 163)

	bpf  goto 115

state 97
	quant:  QUANT NUMBER bpf.    (72)
	quant:  QUANT NUMBER bpf.NUMBER 
	quant:  QUANT NUMBER bpf.bpf 

	NUMBER  shift 116
	(  shift 34
	[  shift 35
	.  reduce 72 (src line 164)

	bpf  goto 117

state 98
	quant:  QUANT bpf NUMBER.    (73)
	quant:  QUANT bpf NUMBER.NUMBER 
	quant:  QUANT bpf NUMBER.bpf 

	NUMBER  shift 118
	(  shift 34
	[  shift 35
	.  reduce 73 (src line 165)

	bpf  goto 119

state 99
	quant:  QUANT bpf bpf.    (74)
	quant:  QUANT bpf bpf.NUMBER 
	quant:  QUANT bpf bpf.bpf 

	NUMBER  shift 120
	(  shift 34
	[  shift 35
	.  reduce 74 (src line 166)

	bpf  goto 121

state 100
	accum:  accummode NUMBER NUMBER.    (86)

	.  reduce 86 (src line 182)


state 101
	accum:  accummode NUMBER bpf.    (88)

	.  reduce 88 (src line 184)


state 102
	accum:  accummode bpf NUMBER.    (87)

	.  reduce 87 (src line 183)


state 103
	accum:  accummode bpf bpf.    (89)

	.  reduce 89 (src line 185)


state 104
	generator:  item ( list ).    (8)

	.  reduce 8 (src line 78)


state 105
	list:  list NUMBER.    (23)

	.  reduce 23 (src line 97)


state 106
	bpf:  ( bplist ipl.) 

	)  shift 122
	.  error


state 107
	bplist:  bplist NUMBER.NUMBER 

	NUMBER  shift 123
	.  error


state 108
	ipl:  IPL.NUMBER 
	ipl:  IPL.COS 
	ipl:  IPL.OFF 

	NUMBER  shift 124
	COS  shift 125
	OFF  shift 126
	.  error


state 109
	bplist:  NUMBER NUMBER.    (26)

	.  reduce 26 (src line 104)


state 110
	bpf:  [ NUMBER NUMBER.ipl ] 
	ipl: .    (28)

	IPL  shift 108
	.  reduce 28 (src line 108)

	ipl  goto 127

state 111
	oscgen:  osc NUMBER NUMBER NUMBER.    (62)

	.  reduce 62 (src line 150)


state 112
	oscgen:  osc bpf NUMBER NUMBER.    (63)

	.  reduce 63 (src line 151)


state 113
	generator:  generator ACCUM ON INIT NUMBER.    (16)

	.  reduce 16 (src line 86)


state 114
	quant:  QUANT NUMBER NUMBER NUMBER.    (75)

	.  reduce 75 (src line 167)


state 115
	quant:  QUANT NUMBER NUMBER bpf.    (76)

	.  reduce 76 (src line 168)


state 116
	quant:  QUANT NUMBER bpf NUMBER.    (77)

	.  reduce 77 (src line 169)


state 117
	quant:  QUANT NUMBER bpf bpf.    (78)

	.  reduce 78 (src line 170)


state 118
	quant:  QUANT bpf NUMBER NUMBER.    (79)

	.  reduce 79 (src line 171)


state 119
	quant:  QUANT bpf NUMBER bpf.    (80)

	.  reduce 80 (src line 172)


state 120
	quant:  QUANT bpf bpf NUMBER.    (81)

	.  reduce 81 (src line 173)


state 121
	quant:  QUANT bpf bpf bpf.    (82)

	.  reduce 82 (src line 174)


state 122
	bpf:  ( bplist ipl ).    (24)

	.  reduce 24 (src line 100)


state 123
	bplist:  bplist NUMBER NUMBER.    (27)

	.  reduce 27 (src line 105)


state 124
	ipl:  IPL NUMBER.    (29)

	.  reduce 29 (src line 109)


state 125
	ipl:  IPL COS.    (30)

	.  reduce 30 (src line 110)


state 126
	ipl:  IPL OFF.    (31)

	.  reduce 31 (src line 111)


state 127
	bpf:  [ NUMBER NUMBER ipl.] 

	]  shift 128
	.  error


state 128
	bpf:  [ NUMBER NUMBER ipl ].    (25)

	.  reduce 25 (src line 101)


52 terminals, 20 nonterminals
93 grammar rules, 129/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
69 working sets used
memory: parser 36/30000
13 extra closures
126 shift entries, 1 exceptions
37 goto entries
0 entries saved by goto default
Optimizer space used: output 163/30000
163 table entries, 0 zero
maximum spread: 52, maximum offset: 110
